# esp32-nimble

./: CMakeLists.txt
include/nimble/: Address.hpp  AdvertisedDevice.hpp  Advertising.hpp  AttributeValue.hpp  Beacon.hpp  Characteristic.hpp  Client.hpp  ConnectionInfo.hpp  Descriptor.hpp  Descriptor2904.hpp  Device.hpp  EddystoneTLM.hpp  EddystoneURL.hpp  ExtendedAdvertising.hpp  HIDDevice.hpp  HIDKeyboardTypes.hpp  HIDTypes.hpp  Log.hpp  NimBLE2904.hpp  NimBLEAddress.hpp  NimBLEAdvertisedDevice.hpp  NimBLEAdvertising.hpp  NimBLEAttValue.hpp  NimBLEBeacon.hpp  NimBLECharacteristic.hpp  NimBLEClient.hpp  NimBLEConnInfo.hpp  NimBLEDescriptor.hpp  NimBLEDevice.hpp  NimBLEEddystoneTLM.hpp  NimBLEEddystoneURL.hpp  NimBLEExtAdvertising.hpp  NimBLEHIDDevice.hpp  NimBLELog.hpp  NimBLERemoteCharacteristic.hpp  (+15 more)
src/: Address.cpp  AdvertisedDevice.cpp  Advertising.cpp  Beacon.cpp  Characteristic.cpp  Client.cpp  Descriptor.cpp  Descriptor2904.cpp  Device.cpp  EddystoneTLM.cpp  EddystoneURL.cpp  ExtendedAdvertising.cpp  HIDDevice.cpp  NimBLE2904.cpp  NimBLEAddress.cpp  NimBLEAdvertisedDevice.cpp  NimBLEAdvertising.cpp  NimBLEBeacon.cpp  NimBLECharacteristic.cpp  NimBLEClient.cpp  NimBLEDescriptor.cpp  NimBLEDevice.cpp  NimBLEEddystoneTLM.cpp  NimBLEEddystoneURL.cpp  NimBLEExtAdvertising.cpp  NimBLEHIDDevice.cpp  NimBLERemoteCharacteristic.cpp  NimBLERemoteDescriptor.cpp  NimBLERemoteService.cpp  NimBLEScan.cpp  NimBLEServer.cpp  NimBLEService.cpp  NimBLEUUID.cpp  NimBLEUtils.cpp  RemoteCharacteristic.cpp  RemoteDescriptor.cpp  RemoteService.cpp  Scan.cpp  Server.cpp  Service.cpp  (+2 more)
